--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUpos1F4mMgY5SP1Q7MLhl",
+      "authorship_tag": "ABX9TyPKaU2TFzTU+j2DR+aw/u+3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
       },
       "outputs": [],
       "source": [
-        "print(\"hello\")"
+        "print(\"hello\")\n",
+        "print(\"world\")"
       ]
     }
   ]
